fix(virtualassistant): CA-1677 bug - fix EVA icon alignment

--- a/app/modules/sunlight/features/featureLanding/_care-features-landing.scss
+++ b/app/modules/sunlight/features/featureLanding/_care-features-landing.scss
@@ -30,11 +30,11 @@
     flex-wrap: wrap;
 
     .care-badge {
-      @include vr-spacing(pt, 0.5);
+      @include vr-spacing(mr, 0.5);
+      line-height: rem-calc(25);
     }
 
     .care-icon {
-      @include vr-spacing(pt, 0.8);
       display: inline-flex;
 
       .people {
@@ -47,12 +47,14 @@
         color: $color-green-dark;
       }
       .icon {
-        @include vr-spacing(pl, 0.5);
+        @include vr-spacing(pt, 0.5);
+        @include vr-spacing(pr, 0.5);
         display: block;
-        padding-top: rem-calc(3); // vr-spacing isn't specific enough
+      }
+      .icon-bot-five {
+        @include vr-spacing(pt, 0.3);
       }
     }
-
   }
 
   .care-features-icon {
@@ -64,7 +66,10 @@
 
     .icon {
       display: block;
-      padding-top: rem-calc(3); // vr-spacing isn't specific enough
+    }
+
+    .icon-bot-six {
+      margin-top: rem-calc(2); // vr-spacing isn't specific enough
     }
 
     span{
